<?xml version="1.0" encoding="utf-8"?>
<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation">

    <string name="app_name">Buddha Voice</string>
    <string name="main_title">Buddha Voice</string>
    <string name="exit_title">Exit</string>
    <string name="stop_title">Stop</string>
    <string name="pause_title">Pause</string>
    <string name="start_title">Start</string>
    <string name="about_title">About</string>
    <string name="ok_label">OK</string>
    <string name="loading">Loading</string>
    <string name="playing_title">Listening...</string>
    <string name="about_subject">About Buddha Voice</string>
    <string name="no_connection">Network Error</string>

	<string name="open_left_drawer">Open Drawer</string>
	<string name="open_right_drawer">Open Right Drawer</string>
	<string name="close_left_drawer">Open Drawer</string>

	<string-array name="drawer_menu">
		<item>Setting</item>
		<item>About</item>
	</string-array>

	<string name="tab1">Offline</string>
	<string name="tab2">Online</string>


    <string name="about_text">Buddha Voice is an Android buddha box. Help you peace and health. If you have any suggestion, please email to
    <i>ccjeng@gmail.com</i></string>

	<string name="license"><Data><![CDATA[Copyright (c) 2015 ccjeng@google.com<br/><br/>
    <br/>Buddha Voice is an Android buddha box. Music source is from <a href=http://www.buda.idv.tw/db.asp?node=105>Buddha media database</a>. Help you peace and health.
    <br/>
    ]]></Data></string>

	<string name="preference">Configuration</string>
	<string name="pref_lang">Language Setting</string>
	<string name="pref_lang_summary">Setup preferred language (Restart required)</string>
	<string-array name="pref_lang_item">	
		<item>English</item>	
		<item>Chinese(Traditional)</item>
		<item>Chinese(Simplified)</item>
		<item>Japanese</item>
	</string-array>
	<string-array name="pref_lang_code">
		<item>en</item>
		<item>zh_TW</item>
		<item>zh_CN</item>	
		<item>ja</item>
	</string-array>
	<string name="pref_online">Online version Server Setting</string>
	<string name="pref_online_summary">Setup online version music server (Restart required)</string>
	<string-array name="pref_online_item">	
		<item>Google (For China user)</item>
		<item>Dropbox(More stable and fast)</item>
	</string-array>
	<string-array name="pref_online_code">
		<item>google</item>
		<item>dropbox</item>
	</string-array>
</resources>
