<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".VoiceListener">
    >
	<RelativeLayout
        android:id="@+id/RelativeLayout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		<LinearLayout
            android:id="@+id/LinearLayoutMainAD"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
            android:orientation="vertical"
            >
			<TextView android:id="@+id/status"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textSize="18sp"
				android:text="@string/playing_title" 
			    />
			<TextView android:id="@+id/songname"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textSize="18sp"
			    />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/stop_button"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_title"
                    android:drawableLeft="@drawable/media_stop"
                    android:layout_weight="0.5"/>
                <Button
                    android:id="@+id/pause_button"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pause_title"
                    android:drawableLeft="@drawable/media_pause"
                    android:layout_weight="0.5"/>
            </LinearLayout>

			<TextView android:id="@+id/songcontent"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textSize="18sp"
                android:autoText="false" />
			<TextView android:id="@+id/songinfo"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textSize="15sp"
			    />
	</LinearLayout>
    </RelativeLayout>
</ScrollView>
